# Chess2

./: CMakeLists.txt  README.md
CppChess/firebase/public/js/webAssembly/: chessWasm.js  chessWasm.wasm  nativeCpp.js  nativeCpp.wasm
build-ascii/: CMakeCache.txt  Makefile  build.sh  chessAscii  cmake_install.cmake
chessEngine/: CMakeLists.txt  brainstorm.txt  log.txt
chessEngine/include/: Benchmarks.h  Bitboards.h  ChessBoard.h  EvalData.h  ExchangeEvaluation.h  GameHistory.h  Move.h  MoveInputData.h  MoveList.h  MoveSelector.h  NewMove.h  OldMove.h  Search.h  TransPositionTable.h  TranspositionTable.h  Uci.h  WebAssembly.h  init.h  types.h
chessEngine/src/: Benchmarks.cpp  Bitboards.cpp  ChessBoard.cpp  EvalData.cpp  ExchangeEvaluation.cpp  GameHistory.cpp  Move.cpp  MoveInputData.cpp  MoveList.cpp  MoveSelector.cpp  NewMove.cpp  OldMove.cpp  Search.cpp  TransPositionTable.cpp  TranspositionTable.cpp  Uci.cpp  WebAssembly.cpp  init.cpp  main.cpp  types.cpp
firebase/: .firebaserc
firebase/public/: icon.xcf  index.html
firebase/public/css/: pieceImages.css  pieces.css
firebase/public/js/: Constants.js  main.js
firebase/public/js/ai/: PieceValueTable.js  alphaBetaSearch.js
firebase/public/js/engine/: Board.js  PiecePosition.js
firebase/public/js/engine/Moves/: CastleMove.js  EnPassantMove.js  Move.js  MoveList.js  PawnForward2Move.js  PromotionMove.js  SimpleMove.js
firebase/public/js/engine/Pieces/: Bishop.js  EmptyPiece.js  King.js  Knight.js  Pawn.js  Queen.js  Rook.js
firebase/public/js/engine/Pieces/pieceUtil/: Piece.js  SimpleMovingPiece.js  SlidingPiece.js
firebase/public/js/ui/: ChessSquareHTMLElement.js  chessBoardHTMLElement.js
firebase/public/js/webAssembly/: chessWasm.js  chessWasm.wasm  nativeInterface.js
include/: Benchmarks.h  Bitboards.h  ChessBoard.h  EvalData.h  GameHistory.h  Move.h  MoveInputData.h  MoveList.h  Search.h  Uci.h  jsInterface.h  test.h  types.h
src/: Benchmarks.cpp  Bitboards.cpp  ChessBoard.cpp  GameHistory.cpp  Move.cpp  MoveInputData.cpp  MoveList.cpp  Search.cpp  Uci.cpp  jsInterface.cpp  main.cpp  test.cpp  types.cpp
